# brightway2-calc

./: .coveralls.yml  .gitignore  .hgignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.txt  LICENSE  MANIFEST  MANIFEST.in  README.md  README.rst  README.txt  appveyor.yml  azure-pipelines.yml  bitbucket-pipelines.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  sm-fixture.tar.bz2
.github/workflows/: custom-config.ini  github_action_notify_documentation_repo.yml  python-package-deploy.yml  python-test-pardiso.yml  python-test-superlu.yml  python-test-umfpack-macos.yml  python-test-umfpack.yml  python-test.yml  test.yml  test_workflow.yml
bw2calc/: __init__.py  caching_lca.py  dense_lca.py  dictionary_manager.py  errors.py  fallbacks.py  fast_scores.py  graph_traversal.py  grid.py  independent_lca.py  indexing.py  lca.py  lca_base.py  least_squares.py  log_utils.py  matrices.py  mc_vector.py  method_config.py  monte_carlo.py  multi_lca.py  restricted_sparse_matrix_dict.py  simple_regionalized.py  single_matrix.py  single_value_diagonal_matrix.py  speed_test.py  utils.py  version.py
bw2calc/sensitivity/: __init__.py  ctv.py  oat_sensitivity.py  parameter_utils.py  percentages.py  sobol_sensitivity.py
bw2calc/tests/: __init__.py  lca.py  matrices.py  sensitivity.py
dev/: compare_direct_vs_jacobi_gmres.ipynb  lca_old.py
docs/: Makefile  conf.py  graph_traversal.rst  index.rst  lca.rst  make.bat  matrix.rst  monte_carlo.rst  regio.rst  technical.rst
src/bw2calc/: __init__.py  caching_lca.py  dense_lca.py  dictionary_manager.py  errors.py  fast_scores.py  fast_supply_arrays.py  iterative_lca.py  jacobi_gmres_lca.py  lca.py  lca_base.py  least_squares.py  log_utils.py  method_config.py  multi_lca.py  partitioned_lca.py  result_cache.py  single_value_diagonal_matrix.py  utils.py
tests/: __init__.py  compatibility.py  conftest.py  dict_man.py  independent_lca.py  indexing.py  lca.py  matrices.py  monte_carlo.py  multi_lca.py  multifunctional_graph_traversal.py  presamples.py  pv_mc.py  single_matrix.py  svdm.py  test_2d_grid.py  test_fast_scores.py  test_fast_supply_arrays.py  test_init_bw2data.py  test_jacobi_gmres_lca.py  test_lca.py  test_method_config.py  test_multi_lca.py  test_partitioned_lca.py  test_restricted_sparse_matrix_dict.py  test_result_cache.py  to_dataframe.py  utils.py
tests/fixtures/: bw2io_example_db_mapping.json  create_fixtures.py  presamples_basic.py
tests/fixtures/basic_fixture/: biosphere.indices.npy  datapackage.json  eb-characterization.indices.npy  technosphere.data.npy  technosphere.flip.npy  technosphere.indices.npy
tests/fixtures/empty_biosphere/: mapping.json
tests/fixtures/example_db/: mapping.json
tests/fixtures/independent/: ia.npy  inv.npy
tests/fixtures/mc_basic/: mapping.json
tests/fixtures/mc_saop/: mapping.json
tests/fixtures/multi/: datapackage.json
tests/fixtures/seq/: datapackage.json  seq.0.indices.npy  seq.0.samples.npy  seq.1.samples.npy
tests/fixtures/single-matrix/: Test fixture.ipynb  generate_fixture.py  sm-fixture.tar.bz2
tests/fixtures/single-sample/: datapackage.json  single-sample.0.samples.npy  single-sample.1.indices.npy  single-sample.1.samples.npy  single-sample.2.indices.npy  single-sample.2.samples.npy
tests/fixtures/unseeded/: datapackage.json
